cf_template/security-group-stack.template
{
	"AWSTemplateFormatVersion" : "2010-09-09",
	"Description" : "Version 0.0.7 template for creating Security Groups in the VPC",

	"Parameters" : {

		"VPC" : {
			"Description" : "Main VPC Id",
			"Type" : "AWS::EC2::VPC::Id"
		},

		"RemoteAccessCIDR" : {
			"Description" : "CIDR IP from where we can SSH into Private Subnet via NAT instance",
			"Type" : "String",
			"MinLength" : "9",
			"MaxLength" : "18",
			"Default" : "38.108.216.66/32",
			"NoEcho" : true,
			"AllowedPattern" : "(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})/(\\d{1,2})",
			"ConstraintDescription" : "must be a valid CIDR range of the form x.x.x.x/x."
		},

		"ProductionEnvironment" : {
			"Description" : "Production environment for the VPC - (Dev1, Alpha, Beta, Pre-Prod, Prod, Test)",
			"Type" : "String",
			"Default" : "Dev1",
			"AllowedValues" : [ "Dev1", "Alpha", "Beta", "Pre-Prod", "Prod", "Test" ],
			"ConstraintDescription" : "must be either Dev1, Alpha or Prod."
		}
	},

	"Resources" : {

		"ExternalELBSecurityGroup" : {
			"Type" : "AWS::EC2::SecurityGroup",
			"Properties" : {
				"GroupDescription" : "Security Group for the internet-facing Elastic Load Balancer",
				"SecurityGroupIngress" : [
					{ "IpProtocol" : "tcp", "FromPort" : "80", "ToPort" : "80", "CidrIp" : {"Ref" : "RemoteAccessCIDR"} },
					{ "IpProtocol" : "tcp", "FromPort" : "443", "ToPort" : "443", "CidrIp" : {"Ref" : "RemoteAccessCIDR"} }
				],
				"VpcId" : { "Ref" : "VPC" },
				"Tags" : [{
					"Key" : "Name",
					"Value" : { "Fn::Join" : ["", [ { "Ref" : "ProductionEnvironment" }, "-ExternalElasticLoadBalancerSG" ] ] }
				}]
			}
		},

		"InternalELBSecurityGroup" : {
			"Type" : "AWS::EC2::SecurityGroup",
			"Properties" : {
				"GroupDescription" : "Security Group for the internal Elastic Load Balancer",
				"SecurityGroupIngress" : [
					{ "IpProtocol" : "tcp", "FromPort" : "443", "ToPort" : "443", "CidrIp" : "10.0.0.0/24" },
					{ "IpProtocol" : "tcp", "FromPort" : "443", "ToPort" : "443", "CidrIp" : "10.0.1.0/24" }
				],
				"VpcId" : { "Ref" : "VPC" },
				"Tags" : [{
					"Key" : "Name",
					"Value" : { "Fn::Join" : ["", [ { "Ref" : "ProductionEnvironment" }, "-InternalElasticLoadBalancerSG" ] ]} 
				}]
			}
		},

		"InternalSocketELBSecurityGroup" : {
			"Type" : "AWS::EC2::SecurityGroup",
			"Properties" : {
				"GroupDescription" : "Security Group for the internal socket Elastic Load Balancer",
				"SecurityGroupIngress" : [
					{ "IpProtocol" : "tcp", "FromPort" : "80", "ToPort" : "80", "CidrIp" : "10.0.0.0/24" },
					{ "IpProtocol" : "tcp", "FromPort" : "80", "ToPort" : "80", "CidrIp" : "10.0.1.0/24" }
				],
				"VpcId" : { "Ref" : "VPC" },
				"Tags" : [{
					"Key" : "Name",
					"Value" : { "Fn::Join" : ["", [ { "Ref" : "ProductionEnvironment" }, "-InternalSocketElasticLoadBalancerSG" ] ]} 
				}]
			}
		},

		"NATServerSecurityGroup" : {
			"Type" : "AWS::EC2::SecurityGroup",
			"Properties" : {
				"GroupDescription" : "Security Group for the NAT Server",
				"SecurityGroupIngress" : [ 
					{ "IpProtocol" : "tcp", "FromPort" : "80", "ToPort" : "80", "CidrIp" : "10.0.10.0/24" },
					{ "IpProtocol" : "tcp", "FromPort" : "80", "ToPort" : "80", "CidrIp" : "10.0.11.0/24" },
					{ "IpProtocol" : "tcp", "FromPort" : "443", "ToPort" : "443", "CidrIp" : "10.0.10.0/24" },
					{ "IpProtocol" : "tcp", "FromPort" : "443", "ToPort" : "443", "CidrIp" : "10.0.11.0/24" },
					{ "IpProtocol" : "tcp", "FromPort" : "1024", "ToPort" : "65535", "CidrIp" : "10.0.10.0/24" },
					{ "IpProtocol" : "tcp", "FromPort" : "1024", "ToPort" : "65535", "CidrIp" : "10.0.11.0/24" },
					{ "IpProtocol" : "tcp", "FromPort" : "22", "ToPort" : "22", "CidrIp" : { "Ref" : "RemoteAccessCIDR"} }
				],
				"SecurityGroupEgress" : [
					{ "IpProtocol" : "tcp", "FromPort" : "80", "ToPort" : "80", "CidrIp" : "0.0.0.0/0" },
					{ "IpProtocol" : "tcp", "FromPort" : "443", "ToPort" : "443", "CidrIp" : "0.0.0.0/0" },
					{ "IpProtocol" : "tcp", "FromPort" : "22", "ToPort" : "22", "CidrIp" : "10.0.10.0/24" },
					{ "IpProtocol" : "tcp", "FromPort" : "22", "ToPort" : "22", "CidrIp" : "10.0.11.0/24" },
					{ "IpProtocol" : "tcp", "FromPort" : "1024", "ToPort" : "65535", "CidrIp" : "0.0.0.0/0" }

				],
				"VpcId" : { "Ref" : "VPC" },
				"Tags" : [{
					"Key" : "Name",
					"Value" : { "Fn::Join" : ["", [ { "Ref" : "ProductionEnvironment" }, "-NATServerSG" ] ] }
				}]
			}
		},

		"KinesisConsumerSecurityGroup" : {
			"Type" : "AWS::EC2::SecurityGroup",
			"DependsOn" : [ "NATServerSecurityGroup", "InternalSocketELBSecurityGroup" ],
			"Properties" : {
				"GroupDescription" : "Security Group for the Kinesis Consumer Servers",
				"SecurityGroupIngress" : [
					{ "IpProtocol" : "tcp", "FromPort" : "22", "ToPort" : "22", "SourceSecurityGroupId" : { "Ref" : "NATServerSecurityGroup" } },
					{ "IpProtocol" : "tcp", "FromPort" : "80", "ToPort" : "80", "SourceSecurityGroupId" : { "Ref" : "InternalSocketELBSecurityGroup" } }
				],
				"VpcId" : { "Ref" : "VPC" },
				"Tags" : [{
					"Key" : "Name",
					"Value" : { "Fn::Join" : ["", [ { "Ref" : "ProductionEnvironment" }, "-KinesisConsumerSG" ] ]}
				}]
			}
		},

		"RoutingServerSecurityGroup" : {
			"Type" : "AWS::EC2::SecurityGroup",
			"DependsOn" : [ "InternalELBSecurityGroup", "NATServerSecurityGroup" ],
			"Properties" : {
				"GroupDescription" : "Security Group for the Routing Server",
				"SecurityGroupIngress" : [
					{ "IpProtocol" : "tcp", "FromPort" : "443", "ToPort" : "443", "SourceSecurityGroupId" : { "Ref" : "InternalELBSecurityGroup" } },
					{ "IpProtocol" : "tcp", "FromPort" : "22", "ToPort" : "22", "SourceSecurityGroupId" : { "Ref" : "NATServerSecurityGroup" } }
				],
				"VpcId" : { "Ref" : "VPC" },
				"Tags" : [{
					"Key" : "Name",
					"Value" : { "Fn::Join" : ["", [ { "Ref" : "ProductionEnvironment" }, "-RoutingServerSG" ] ] }
				}]
			}
		},

		"DBReplicaSecurityGroup" : {
			"Type" : "AWS::EC2::SecurityGroup",
			"Properties" : {
				"GroupDescription" : "Security to allow MongoDB Replica Set Members to communicate with each other",
				"VpcId" : { "Ref" : "VPC" },
				"Tags" : [{
					"Key" : "Name",
					"Value" : { "Fn::Join" : ["", [ {  "Ref" : "ProductionEnvironment" }, "-ReplicaMembersSG" ] ] }
				}]
			}
		},

		"DBServerSecurityGroup" : {
			"Type" : "AWS::EC2::SecurityGroup",
			"DependsOn" : [ "DBReplicaSecurityGroup", "NATServerSecurityGroup" ],
			"Properties" : {
				"GroupDescription" : "Security Group for the MongoDB Replica Set Servers",
				"SecurityGroupIngress" : [
					{ "IpProtocol": "tcp", "FromPort": "27017", "ToPort": "27030", "SourceSecurityGroupId": { "Ref" : "DBReplicaSecurityGroup" } },
					{ "IpProtocol": "tcp", "FromPort": "27017", "ToPort": "27030", "SourceSecurityGroupId": { "Ref" : "RoutingServerSecurityGroup"} },
					{ "IpProtocol": "tcp", "FromPort": "27017", "ToPort": "27030", "SourceSecurityGroupId": { "Ref" : "KinesisConsumerSecurityGroup"} },
					{ "IpProtocol": "tcp", "FromPort": "22", "ToPort": "22", "SourceSecurityGroupId": { "Ref" : "NATServerSecurityGroup"} }
				],
				"SecurityGroupEgress" : [
					{ "IpProtocol" : "tcp", "FromPort" : "80", "ToPort" : "80", "CidrIp" : "0.0.0.0/0" },
					{ "IpProtocol" : "tcp", "FromPort" : "443", "ToPort" : "443", "CidrIp" : "0.0.0.0/0" },
					{ "IpProtocol" : "tcp", "FromPort" : "1024", "ToPort" : "65535", "CidrIp" : "0.0.0.0/0" } 
				],
				"VpcId" : { "Ref" : "VPC" },
				"Tags" : [{
					"Key" : "Name",
					"Value" : { "Fn::Join" : ["", [ { "Ref" : "ProductionEnvironment" }, "-DBServerSG" ] ] }
				}]

			}
		},

		"WebServerSecurityGroup" : {
			"Type" : "AWS::EC2::SecurityGroup",
			"DependsOn" : [ "ExternalELBSecurityGroup", "InternalELBSecurityGroup" ],
			"Properties" : {
				"GroupDescription" : "Security Group for the Web Servers",
				"SecurityGroupIngress" : [
					{ "IpProtocol" : "tcp", "FromPort": "3000", "ToPort": "3000", "SourceSecurityGroupId": { "Ref" : "ExternalELBSecurityGroup" } },
					{ "IpProtocol" : "tcp", "FromPort" : "22", "ToPort" : "22", "CidrIp" : { "Ref" : "RemoteAccessCIDR"} }
				],
				"VpcId" : { "Ref" : "VPC" },
				"Tags" : [{
					"Key" : "Name",
					"Value" : { "Fn::Join" : ["", [ { "Ref" : "ProductionEnvironment" }, "-WebServerSG" ] ] }
				}]
			}
		}
	},

	"Outputs" : {
		"ExternalELBSecurityGroup" : {
			"Description" : "Security Group Id for the internet-facing Elastic Load Balancer",
			"Value" : { "Ref" : "ExternalELBSecurityGroup" }
		},
		"InternalELBSecurityGroup" : {
			"Description" : "Security Group Id for the internal Elastic Load Balancer",
			"Value" : { "Ref" : "InternalELBSecurityGroup" }
		},
		"InternalSocketELBSecurityGroup" : {
			"Description" : "Security Group Id for the internal socket Elastic Load Balancer",
			"Value" : { "Ref" : "InternalSocketELBSecurityGroup" }
		},
		"NATServerSecurityGroup" : { 
			"Description" : "Security Group Id for the NAT Server",
			"Value" : { "Ref" : "NATServerSecurityGroup" }
		},
		"KinesisConsumerSecurityGroup" : {
			"Description" : "Security Group Id for the Kinesis Consumer Servers",
			"Value" : { "Ref" : "KinesisConsumerSecurityGroup" }
		},
		"RoutingServerSecurityGroup" : {
			"Description" : "Security Group Id for the Front End Routing Servers",
			"Value" : { "Ref" : "RoutingServerSecurityGroup"}
		},
		"DBReplicaSecurityGroup" : {
			"Description" : "Security Group Id for DB Replica Set Members",
			"Value" : { "Ref" : "DBReplicaSecurityGroup" }
		},
		"DBServerSecurityGroup" : {
			"Description" : "Security Group Id for the DB Servers",
			"Value" : { "Ref" : "DBServerSecurityGroup" }
		},
		"WebServerSecurityGroup" : {
			"Description" : "Security Group Id for the Web Servers",
			"Value" : { "Ref" : "WebServerSecurityGroup"}
		}
	}
}
